--- a/client/index.html
+++ b/client/index.html
@@ -5,15 +5,15 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-  <link rel="icon" href="https://bcw.blob.core.windows.net/public/img/9977764104160066" />
+  <link rel="icon" href="./src/assets/img/backupLogo.png" />
   <title>
-    backupp
+    backup
   </title>
 </head>
 
 <body>
   <noscript>
-    <strong>We're sorry but backupp doesn't work properly without JavaScript
+    <strong>We're sorry but backup doesn't work properly without JavaScript
       enabled. Please enable it to continue.</strong>
   </noscript>
   <div id="app"></div>
